feat(main): add new test